# vpp

./: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  main.c  vpp.c
src/taka/: string.c
