AC_INIT(vpp, 2.0.4, takashige@users.sourceforge.net)
AC_CONFIG_SRCDIR([src/vpp.h])
AM_INIT_AUTOMAKE(vpp, 2.0.3)
AM_CONFIG_HEADER(config.h)

AC_CHECK_COMPILERS
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_DEFINE(FALSE, (0), [Boolean False])
AC_DEFINE(TRUE, (!FALSE), [Boolean True])

AC_ARG_WITH(lbs, [  --with-lbs=SIZE[[byte]]   line buffer size [[default=4096]]], lbs="$withval", lbs=4096)
AC_DEFINE_UNQUOTED(LINE_BUFFER_SIZE, ${lbs}, [configured line buffer size])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
